// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`description > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_31__1do42ls25"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_captionSmall__1do42lsq style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with aria-describedby 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div>
      <label
        class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        id="id-label"
      >
        Label
      </label>
      <span
        class="style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_captionSmall__1do42lsq style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
        id="id-helper"
        role="status"
      >
        helper
      </span>
      <input
        aria-describedby="id-helper"
        aria-labelledby="id-label"
        data-testid="test-input"
        type="text"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`description > renders correctly with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
      id="id"
      role="status"
    >
      Error
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with error disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_caption__1do42lsp style_undefined_compound_12__1do42ls1m"
      id="id"
      role="status"
    >
      Error
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with error true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
      id="id"
      role="status"
    >
      helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with helper ReactNode 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
      id="id"
      role="status"
    >
      <div>
        Helper
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with helper string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with success string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_success__1do42lse style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_56__1do42ls2u"
      id="id"
      role="status"
    >
      Success
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with success string disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_default__1do42ls4 style_sentiment_success__1do42lse style_variant_caption__1do42lsp style_undefined_compound_20__1do42ls1u"
      id="id"
      role="status"
    >
      Success
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with success true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_success__1do42lse style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_56__1do42ls2u"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders errors when helper, error and sucess are defined 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
      id="id"
      role="status"
    >
      error
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders success when helper and sucess are defined 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_success__1do42lse style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_56__1do42ls2u"
      id="id"
      role="status"
    >
      success
    </span>
  </div>
</DocumentFragment>
`;
